--- a/car-dealer-app/package.json
+++ b/car-dealer-app/package.json
@@ -6,12 +6,18 @@
     "bootstrap": "^4.3.1",
     "firebase": "^7.5.0",
     "firebaseui": "^4.3.0",
+    "list.js": "^1.5.0",
+    "mobx": "^5.15.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-firebaseui": "^4.0.0",
+    "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "reactstrap": "^8.1.1"
+    "react-table": "^7.0.0-rc.15",
+    "react-tabulator": "^0.10.3",
+    "reactstrap": "^8.1.1",
+    "tabulator-tables": "^4.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
